--- a/src/components/AssetsTable/modal.scss
+++ b/src/components/AssetsTable/modal.scss
@@ -7,11 +7,11 @@
     padding-bottom: 20px;
     display: block;
 }
-.Modal__modal-content {
+.modal-content {
     width: 375px;
     height: 206px;
-    left: 50%;
-    right: 50%;
+    color: green;
+    background-color: red;
 }
 .modal-alert-icon {
     color: #FDC02F;
