Address PR comments

--- a/src/components/AssetsSearch/AssetsSearch.scss
+++ b/src/components/AssetsSearch/AssetsSearch.scss
@@ -1,9 +1,11 @@
+@import 'edx-bootstrap';
+
 .form-inline label {
-  margin-right: 10px;
+  margin-right: 1.0rem;
   font-weight: 600;
 }
 
 .form-inline button {
-  margin-left: 10px;
-  padding: 8px 10px;
+  margin-left: 1.0rem;
+  padding: 0.8rem 1.0rem;
 }
